<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
            <TableRow
                android:id="@+id/rowHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textActRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
...
                android:id="@+id/rowLastPointsPlayer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <TextView
                    android:id="@+id/textLastPointsPlayer1"
                    style="@style/TextViewLastPoints"
                    android:layout_width="11dp"
                    android:text="@string/last_points_player1" />
            </TableRow>

            <TableRow
...
                <ImageView
                    android:id="@+id/imgPlayer1Active"
                    style="@style/ImgActivePlayerStyle"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/namePlayer1"
                    style="@style/EditPlayerNameStyle"
                    android:text="@string/player1" />

                <EditText
                    android:id="@+id/editThinkPlayer1"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player1_think"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editGetWinPlayer1"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player1_get_win"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/actPointsPlayer1"
                    style="@style/ActualPointsStyle"
                    android:text="@string/player1_points"
                    android:visibility="gone" />
            </TableRow>

            <TableRow
                android:id="@+id/rowLastPointsPlayer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <TextView
                    android:id="@+id/textLastPointsPlayer2"
                    style="@style/TextViewLastPoints"
                    android:text="@string/last_points_player2" />

            </TableRow>

            <TableRow
...
                <EditText
                    android:id="@+id/namePlayer2"
                    style="@style/EditPlayerNameStyle"
                    android:text="@string/player2" />

                <EditText
                    android:id="@+id/editThinkPlayer2"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player2_think"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editGetWinPlayer2"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player2_get_win"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/actPointsPlayer2"
...
                android:id="@+id/rowLastPointsPlayer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <TextView
                    android:id="@+id/textLastPointsPlayer3"
                    style="@style/TextViewLastPoints"
                    android:text="@string/last_points_player3" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPlayer3"
...
                <EditText
                    android:id="@+id/namePlayer3"
                    style="@style/EditPlayerNameStyle"
                    android:text="@string/player3" />

                <EditText
                    android:id="@+id/editThinkPlayer3"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player3_think"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editGetWinPlayer3"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player3_get_win"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/actPointsPlayer3"
...
                android:id="@+id/rowLastPointsPlayer4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8sp">

                <TextView
                    android:id="@+id/textLastPointsPlayer4"
                    style="@style/TextViewLastPoints"
                    android:text="@string/last_points_player4" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPlayer4"
...
                <EditText
                    android:id="@+id/namePlayer4"
                    style="@style/EditPlayerNameStyle"
                    android:text="@string/player4" />

                <EditText
                    android:id="@+id/editThinkPlayer4"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player4_think"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editGetWinPlayer4"
                    style="@style/ActualEditPointsStyle"
                    android:text="@string/player4_get_win"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/actPointsPlayer4"
...
                android:id="@+id/ButtomBtnBar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="bottom">

                <Button
                    android:id="@+id/nextRoundBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_span="3"
                    android:paddingLeft="20dp"
...
