<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.sbaumert.wizardhelper.View.MainActivity">
    <item
        android:id="@+id/finish_actual_game"
        android:enabled="false"
        android:orderInCategory="1000"
        android:title="@string/cancel_actual_game" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_game_history"
        android:enabled="false"
        android:icon="@drawable/table_24"
        android:orderInCategory="10"
        android:title="@string/game_history"
        app:showAsAction="never" />
</menu>
