<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/history_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="horizontal">

        <TableLayout
            android:id="@+id/history_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </HorizontalScrollView>
</androidx.core.widget.NestedScrollView>
